--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-17 04:14:40
+lastsearch = 2024-07-17 05:20:42
 
 [everon.online]
 match = -7.4%%
@@ -12,14 +12,14 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -74.1%%
-title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
-url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071
+match = -66.7%%
+title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
-match = -5.3%%
-title = Bộ Chăn Ga Giảm Giá
-url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
+match = 15.8%%
+title = Bộ everon EPM 21069
+url = https://tongdailyeveron.com.vn/products/bo-everon-epm-21069
 
 [demxanh.com]
 match = -7.4%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Everon EPC-21053
 url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = -18.5%%
+title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
+url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
 
 [everon.net.vn]
 match = -18.5%%
