--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-17 04:51:36
+lastsearch = 2024-07-17 05:16:18
 
 [shopee.vn]
-match = -36.8%%
-title = Chiếu trúc, chiếu tre HT nan nhỏ siêu mát
-url = https://shopee.vn/Chiếu-trúc-chiếu-tre-HT-nan-nhỏ-siêu-mát-i.141565512.24776596764
+match = -94.7%%
+title = chiếu trúc trẻ em giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc trẻ em
 
 [chieutrelanlan.com]
 match = -105.3%%
@@ -64,7 +64,7 @@ url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-
 [tiki.vn]
 match = -136.8%%
 title = Đồ Chơi Trẻ Em Thông Minh HT SYS - Giúp Tư Duy, Sáng ...
-url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587204
+url = https://tiki.vn/do-choi-tre-em-ht-sys-bo-do-choi-lap-ghep-ky-su-bang-oc-nhua-tang-kem-khoan-do-choi-tre-em-thong-minh-ht-sys-giup-tu-duy-sang-tao-giao-duc-cho-be-hang-chinh-hang-p275587203.html?spid=275587203
 
 [khodem.vn]
 match = 31.6%%
