--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,27 +4,27 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-17 00:52:47
+lastsearch = 2024-07-17 05:19:37
 
 [munghoangphat.com]
-match = -24.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
-match = -36.0%%
-title = Màn chụp tự bung đỉnh vuông tiến đạt hàng chính hãng, ...
-url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông tiến đạt
+match = -40.0%%
+title = Màn chụp hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=màn chụp
 
 [shopee.vn]
-match = -48.0%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = 4.0%%
+title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
 
 [www.mungbaobao.com]
-match = -32.0%%
-title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
-url = https://www.mungbaobao.com/
+match = 32.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Màn chụp tự bung đỉnh vuông cao cấp
 url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 
 [www.lazada.vn]
-match = 4.0%%
-title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
+match = -44.0%%
+title = ( BIG SALE ) Màn Chụp Đỉnh Vuông Chân Viền, Mùng ...
+url = https://www.lazada.vn/products/big-sale-man-chup-dinh-vuong-chan-vien-mung-chup-tu-bung-dinh-vuong-chan-vien-hang-cao-cap-bao-hanh-18-thang-i1617727984.html
 
 [everonvn.com.vn]
 match = 0.0%%
