--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-17 10:35:44
+lastsearch = 2024-07-17 10:52:15
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -238.5%%
-title = Coco Chan (@cocopops072) • Instagram photos and videos
-url = https://www.instagram.com/cocopops072/?hl=en
+match = -107.7%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -27,8 +27,8 @@ title =
 url = https://en.wikipedia.org/wiki/Coco_Chanel
 
 [www.sassymamahk.com]
-match = -246.2%%
-title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
+match = -200.0%%
+title = That Mama: Coco Chan, Founder Of Voltage PR ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
@@ -47,8 +47,8 @@ title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
-match = -200.0%%
-title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
+match = -192.3%%
+title = Coco Viet Homestay - Hoi An Hotels - Tripadvisor
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
@@ -150,4 +150,9 @@ url = https://www.youtube.com/watch?v=o5cELP06Mik
 match = -284.6%%
 title = Parameter-Efficient Low Rank Adapter for Dense Predictions
 url = https://openaccess.thecvf.com/content/CVPR2023/papers/Yin_1_VS_100_Parameter-Efficient_Low_Rank_Adapter_for_Dense_Predictions_CVPR_2023_paper.pdf
+
+[www.hkubs.hku.hk]
+match = -261.5%%
+title = HKU Business School teams won the 1st runner-up in ...
+url = https://www.hkubs.hku.hk/media/school-news/hku-business-school-teams-won-the-1st-runner-up-in-hkicpa-business-case-competition-2021/
 
