--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-17 09:09:57
+lastsearch = 2024-07-17 10:47:55
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -20.0%%
-title = Bóng Bulb HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-bulb-htlight
+match = -13.3%%
+title = Đèn chiếu điểm HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -206.7%%
-title = Đèn pha LED: giải pháp tối ưu cho chiếu sáng ngoài trời
-url = https://www.htlightlevel.vn/den-pha-led-chieu-sang-ngoai-troi/
+match = -120.0%%
+title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -52,9 +52,9 @@ title = https://mietistudio.com/search?type=product&q=✅ ...
 url = https://mietistudio.com/search?type=product&q=✅ MU88 ✅MU88 Tặng 30K✅✅ Copy_Tk88.co ✅ Nhà cái uy tín ✅  Seopro
 
 [hactexoticzone.com]
-match = 0.0%%
-title = Cây bắt mồi
-url = https://hactexoticzone.com/cay-bat-moi
+match = 6.7%%
+title = HT - Exoticzone
+url = https://hactexoticzone.com/
 
 [www.youtube.com]
 match = -240.0%%
