--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-17 08:05:09
+lastsearch = 2024-07-17 10:48:15
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -123.5%%
-title = The army list - Page 463 - Google Books Result
-url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC68ksKSLK&sig=ACfU3U2H_DLUKBGoMEqYhl_QynFqsdY7Qg&hl=en&sa=X&ved=2ahUKEwjbvdWA36yHAxUng4kEHTcHB3sQ6AF6BAgnEAM
+match = -176.5%%
+title = Official Army Register - Page 356 - Google Books Result
+url = https://books.google.com/books?id=TOYsAAAAIAAJ&pg=RA1-PA356&lpg=RA1-PA356&dq=man+in+hoa+dep+16&source=bl&ots=m4CeKxM8OW&sig=ACfU3U1Cm4uLAR0vuSwgU1IlDt0R96LW5g&hl=en&sa=X&ved=2ahUKEwiLmpKola2HAxXbj4kEHSyHDnsQ6AF6BAgmEAM
 
 [tax.vermont.gov]
 match = -29.4%%
