--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-17 08:01:40
+lastsearch = 2024-07-17 10:46:20
 
 [www.walmart.com]
 match = -162.5%%
@@ -17,9 +17,9 @@ title = Who remembers this hack? Using a wet velour puff to apply ...
 url = https://www.tiktok.com/@hudabeauty/video/7316247408676080942
 
 [www.diepxuan.com]
-match = -162.5%%
-title = Túi Warmdream 2 gấp 180x200x12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-2-gap-180x200x12.html
+match = -150.0%%
+title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [digitalmaine.com]
 match = -75.0%%
@@ -37,9 +37,9 @@ title = Điệp Xuân Chăn ga gối đệm Điệp Xuân
 url = https://diepxuan.com/
 
 [www.facebook.com]
-match = -25.0%%
-title = Chăn ga gối đệm Điệp Xuân
-url = https://www.facebook.com/diepxuanco/?locale=nb_NO
+match = -143.8%%
+title = Tiếp tục những cung đường... #thixagiarai ...
+url = https://www.facebook.com/thixaGiaRaiBL/videos/tiếp-tục-những-cung-đường-thixagiarai-giaraiquehuongtoi/433333748972674/
 
 [www.griffingouldwebsite.com]
 match = -43.8%%
@@ -92,14 +92,14 @@ title = Dc motors capacity [71UzPa] - DESECHABLES PELICANO
 url = https://desechablespelicano.my-free.website/s/cdn/?https://unicom.mx/micrositios.aspx?i=https://5976428.xn----8sbgffad7bfboii9c6b4a5dkg.xn--p1ai/9184275u6fe43a
 
 [www.lazada.vn]
-match = -212.5%%
-title = {Asong ngoài trời} viền gờ hình nền ốp tường 3D 2.3m ...
-url = https://www.lazada.vn/products/asong-ngoai-troi-vien-go-hinh-nen-op-tuong-3d-23m-vien-tuong-khong-tham-nuoc-bot-pe-mo-hinh-tu-dinh-trang-tri-noi-that-duong-vien-tran-duc-linh-hoat-hinh-dan-tuong-noi-that-i2595249029-s12638121909.html?from_gmc=1&fl_tag=1
+match = -256.2%%
+title = {Asong ngoài trời} giấy dán tường 3D 2.3m * 10cm viền gờ hình ...
+url = https://www.lazada.vn/products/asong-ngoai-troi-giay-dan-tuong-3d-23m-10cm-vien-go-hinh-nen-op-tuong-3d-tu-dinh-mieng-dan-tuong-vien-tuong-vien-vien-vien-tuong-khong-tham-nuoc-xop-dan-tuong-giay-dan-tuong-tran-i2595148668.html
 
 [shopee.vn]
-match = -156.2%%
-title = phụ kiện trẻ em giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=phụ kiện trẻ em
+match = -137.5%%
+title = Mua sắm online sản phẩm Phụ kiện trẻ em giá tốt
+url = https://shopee.vn/Phụ-kiện-trẻ-em-cat.11036382.11036397
 
 [www.nitrc.org]
 match = -156.2%%
