--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-16 22:47:07
+lastsearch = 2024-07-17 10:44:57
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,14 +17,14 @@ title = Identification of 12 new susceptibility loci for different ...
 url = https://pubmed.ncbi.nlm.nih.gov/28346442/
 
 [www.dir.ca.gov]
-match = -21.4%%
-title = Lien Claimants
-url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
+match = -126.3%%
+title = Workers' Compensation Appeals Board - Panel decisions
+url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = -10.5%%
-title = Frank McCormick, PhD, FRS
-url = https://profiles.ucsf.edu/frank.mccormick
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
 match = -168.4%%
