--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-17 04:52:55
+lastsearch = 2024-07-17 10:52:49
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -337,9 +337,9 @@ title = Admiral Boulevard
 url = https://mostateparks.com/sites/mostateparks/files/Parks-Blvds-AL Survey.pdf
 
 [faculty.uci.edu]
-match = -115.0%%
-title = Nathan D. Wong - UC Irvine - Faculty Profile System
-url = https://faculty.uci.edu/profile/?facultyId=2414
+match = -140.0%%
+title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
 [www.cia.gov]
 match = -35.0%%
