--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-07-17 09:46:17
+lastsearch = 2024-07-17 11:22:54
 
 [www.diepxuan.com]
-match = -16.7%%
-title = Túi Singapore 150x190x09 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/tui-singapore-150x190x09.html
+match = 5.3%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
-match = -58.3%%
-title = Where We Fly | Flights with TUI 2024 / 2025
-url = https://www.tui.co.uk/flight/where-we-fly
+match = -10.5%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [www.seatrade-cruise.com]
 match = -100.0%%
