--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-17 12:39:10
+lastsearch = 2024-07-17 13:17:01
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
 match = -33.3%%
-title = Bộ ga chun Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v18
+title = Bộ ga chun Silky G121 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-silky-g121
 
 [shopee.vn]
 match = -114.3%%
@@ -77,9 +77,9 @@ title = Ga gối chun xoa nhung dày đẹp giá rẻ
 url = https://kenhsinhvien.vn/t/ga-goi-chun-xoa-nhung-day-dep-gia-re.441647/
 
 [m.facebook.com]
-match = 27.8%%
-title = Chăn ga gối Ken ry
-url = https://m.facebook.com/p/Chăn-ga-gối-Ken-ry-100069834486220/?locale=ro_RO
+match = -71.4%%
+title = ELENTEC VIỆT NAM | 𝐆𝐚 𝐆𝐨̂́𝐢 𝐂𝐨𝐭𝐭𝐨𝐧 Đ𝐮̃𝐢 𝐁𝐨̣𝐜 𝐂𝐡𝐮𝐧 ...
+url = https://m.facebook.com/groups/2103146129795010/posts/7230337853742453/
 
 [demgiare.vn]
 match = 19.0%%
@@ -90,4 +90,19 @@ url = https://demgiare.vn/ga-goi-xoa-nhung-xn18-1m8-x-2m.html
 match = -114.3%%
 title = Everon EPC-21053 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
 url = https://www.everonvn.vn/chi-tiet/everon-EPC21053.html
+
+[alnena.vn]
+match = 52.4%%
+title = Bộ Chăn Ga Gối Chun Trần
+url = https://alnena.vn/collections/bo-chan-ga-goi-chun-tran
+
+[www.lamchame.com]
+match = -128.6%%
+title = Hà Nội: - Bộ ga gối -- Giá 110k, Vải Nhung xoa không nhăn phai ...
+url = https://www.lamchame.com/forum/threads/bo-ga-goi-gia-110k-vai-nhung-xoa-khong-nhan-phai-mau.1519998/
+
+[ngungon.com]
+match = 40.0%%
+title = Bộ Ga Chun Chần
+url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan/
 
