--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-17 11:48:59
+lastsearch = 2024-07-17 13:20:22
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [shopee.vn]
-match = -18.5%%
-title = Chăn Băng Lông Tuyết Nhung, Chăn Thái Sịn Cho Mùa ...
-url = https://shopee.vn/Chăn-Băng-Lông-Tuyết-Nhung-Chăn-Thái-Sịn-Cho-Mùa-Đông-Ấm-Áp-Loại-5kg-2x2-2m-i.529742790.25408766175
+match = 7.4%%
+title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
+url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
 
 [www.lazada.vn]
 match = 22.2%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -66.7%%
-title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
-url = https://www.youtube.com/watch?v=XHN7YU5NYi4
+match = -29.6%%
+title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
+url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
 
 [baodaknong.vn]
 match = -7.4%%
@@ -102,9 +102,9 @@ title = Những điều cấm kỵ ở Thái Lan TUYỆT ĐỐI mà bạn cần 
 url = https://www.kosshop.vn/t/nhung-dieu-cam-ky-o-thai-lan.html
 
 [m.facebook.com]
-match = -70.4%%
-title = This is Mỏ Hỗn 2.0 - “Xẹc sì còn phi đân🥵 Xô in theo li chân ...
-url = https://m.facebook.com/thisismohon2.0/photos/xẹc-sì-còn-phi-đânxô-in-theo-li-chân-katy-perry-và-khoảnh-khắc-mặt-trời-chân-lý-/122191111136033460/
+match = -11.1%%
+title = Chân dung chuyên gia trang điểm người Việt ...
+url = https://m.facebook.com/groups/572348384121798/posts/1258002742223022/
 
 [vietbao.com]
 match = -59.3%%
