--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-17 11:15:04
+lastsearch = 2024-07-17 13:19:30
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -53.6%%
-title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
+match = -17.9%%
+title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = 11.1%%
-title = CỘNG ĐỒNG TIÊU DÙNG MỸ PHẨM
-url = https://www.facebook.com/groups/2045451282406040/?locale=vi_VN
+match = -35.7%%
+title = tuyển dụng kỹ thuật viên spa | ❤️ cần tuyển 1 chị tạp
+url = https://www.facebook.com/groups/1529017447196745/posts/️-cần-tuyển-1-chị-tạp-vụ-spa️️-đc-520-đại-lộ-bd-phường-hiệp-thành-tptdm-bình-dươ/7569101039854992/
 
 [www.favri.org.vn]
 match = -10.7%%
