--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-17 11:15:26
+lastsearch = 2024-07-17 13:21:40
 
 [www.bible.com]
 match = -88.2%%
@@ -12,9 +12,9 @@ title = LUKA 22 | MIZCLBSI Bible | YouVersion
 url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
 match = -82.4%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
