--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-17 10:49:21
+lastsearch = 2024-07-17 13:23:32
 
 [www.tui.co.uk]
-match = -153.3%%
-title = Cruise Calendar 2024 / 2025 | Marella Cruises
-url = https://www.tui.co.uk/cruise/cruise-calendar/
+match = -80.0%%
+title = Marella Discovery 2 Itineraries
+url = https://www.tui.co.uk/cruise/ships/marella-discovery-2/itineraries
 
 [www.travelgossip.co.uk]
 match = 0.0%%
