--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-17 10:49:31
+lastsearch = 2024-07-17 13:37:59
 
 [www.zillow.com]
 match = -69.2%%
@@ -147,9 +147,9 @@ title =
 url = https://georgia.gov/request-immunization-records
 
 [www.instagram.com]
-match = -261.5%%
-title = Jacq Gani (@gainswithjacq) • Instagram photos and videos
-url = https://www.instagram.com/gainswithjacq/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.mariettaga.gov]
 match = -38.5%%
@@ -495,4 +495,9 @@ url = https://www.bible.com/bible/1010/PSA.18.DIMASBSI
 match = -246.2%%
 title = 5.17: Electron Configurations and the Periodic Table
 url = https://chem.libretexts.org/Bookshelves/General_Chemistry/ChemPRIME_(Moore_et_al.)/05:_The_Electronic_Structure_of_Atoms/5.17:_Electron_Configurations_and_the_Periodic_Table
+
+[www.the-sun.com]
+match = 0.0%%
+title = 
+url = https://www.the-sun.com/news/11689832/wolfie-and-sylvia-gani-engagement-announcement-video-instagram-youtube/
 
