--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-17 11:32:43
+lastsearch = 2024-07-17 13:44:41
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfjQDso9&sig=ACfU3U3pFp6tvxZ0b_WcI8dRq2xtrv4CuA&hl=en&sa=X&ved=2ahUKEwjqmMygn62HAxWgElkFHQeqCisQ6AF6BAg2EAM
+match = -460.0%%
+title = Index of Trademarks Issued from the United States Patent Office
+url = https://books.google.com/books?id=YhBWAAAAMAAJ&pg=RA1-PA144&lpg=RA1-PA144&dq=man+ren+16&source=bl&ots=gfqOFTi3nw&sig=ACfU3U13RPyo8BjCOUGEcHMsZhKBbn6BlA&hl=en&sa=X&ved=2ahUKEwjX56DgvK2HAxVsEVkFHb2MCywQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -62,9 +62,9 @@ title =
 url = https://www.phillyvoice.com/ren-gill-music-mental-health-chronic-illness-/
 
 [www.instagram.com]
-match = -100.0%%
-title = The Ren Men (@the_ren_men)
-url = https://www.instagram.com/the_ren_men/
+match = -320.0%%
+title = MC REN (@realmcren) • Instagram photos and videos
+url = https://www.instagram.com/realmcren/?hl=en
 
 [www.youtube.com]
 match = -170.0%%
@@ -117,9 +117,9 @@ title = Georgia Renaissance Festival: Celebrating 39 Years of Cheers!
 url = https://www.garenfest.com/
 
 [www.reddit.com]
-match = 0.0%%
-title = 
-url = https://www.reddit.com/r/makinghiphop/comments/1xxaoc/what_is_16_bars_really/
+match = -160.0%%
+title = Found an Asha'man at the ren faire
+url = https://www.reddit.com/r/WoT/comments/69a1e1/found_an_ashaman_at_the_ren_faire/
 
 [cca.hawaii.gov]
 match = -300.0%%
@@ -187,9 +187,9 @@ title = Snoke/Ren '16 Men's
 url = https://geekteez.com/index.php?route=product/product&product_id=3688
 
 [www.tiktok.com]
-match = -130.0%%
-title = Ren (@renmakesmusic) Official
-url = https://www.tiktok.com/@renmakesmusic?lang=en
+match = -20.0%%
+title = Ren (@renstercec)
+url = https://www.tiktok.com/@renstercec
 
 [www.marketfairshoppes.com]
 match = -300.0%%
