--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-17 11:22:32
+lastsearch = 2024-07-17 13:37:25
 
 [m.youtube.com]
 match = -144.4%%
@@ -12,9 +12,9 @@ title = Quán bún nem nướng bán 18 năm với cây nem khổng lồ ...
 url = https://m.youtube.com/watch?v=EXN2H5TJ7Ko
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 17.6%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [www.instagram.com]
 match = -66.7%%
@@ -22,9 +22,9 @@ title = 𝐍𝐞𝐦 𝐜𝐡𝐚̉ 𝐜𝐚́𝐜 𝐥𝐨𝐚̣𝐢 đ𝐚𝐧
 url = https://www.instagram.com/p/C8pRwdDgBbw/
 
 [www.facebook.com]
-match = -16.7%%
-title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -105.6%%
+title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
+url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
 match = -155.6%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -138.9%%
-title = Nguoi Viet Colorado | 💥 NEM CUA BỂ VUÔNG SIÊU CHẤT ...
-url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
+match = -105.6%%
+title = Ăn vặt ngon Cali | NEM CHUA HỦ $65 ( 50 cái )
+url = https://m.facebook.com/groups/anvatngoncali/posts/8357068874306053/
 
 [www.proz.com]
 match = -183.3%%
